trunk/yanl/examples/t1/fail/indexare_gresita.yanl
# Nu orice simbol poate fi folosit ca array

program dude;
var a:integer;

procedure b
begin
end;

function f(z:integer):integer
begin
  f:=b[3]+1;
end;

begin
  writeinteger(20);
end.